# MS-HPC-AI-GPU

./: README.md  plan_du_cours.md
code/asyncTransferCuda/: .gitignore  async.cu  readme.md
code/bandwidth/: CudaTimer.h  bandwidth.cu
code/bandwidth/solution/: bandwidth.cu
code/heat/heat2d3d_cmake/: CMakeLists.txt  CudaTimer.h  Makefile.orig  README.md  TODO  cuda_error.h  cuda_helper.h  heat2d_kernel_gpu_naive.cu  heat2d_kernel_gpu_shmem1.cu  heat2d_kernel_gpu_shmem2.cu  heat2d_kernel_gpu_shmem3.cu  heat2d_solver_gpu_naive.cu  heat2d_solver_gpu_shmem1.cu  heat2d_solver_gpu_shmem2.cu  heat3d_kernel_cpu.h  heat3d_kernel_gpu_naive.cu  heat3d_kernel_gpu_shmem1.cu  heat3d_kernel_gpu_shmem4.cu  heat3d_solver_gpu_naive.cu  heat3d_solver_gpu_shmem1.cu  heat3d_solver_gpu_shmem4.cu  heatEqSolver.par  heat_solver_cpu.cpp
code/heat/heat2d3d_cmake/common/: GetPot.h  Timer.h  heat_kernel_cpu.cpp  heat_kernel_cpu.h  misc.h  output.cpp
code/heat/heat2d3d_cmake/doc/: .gitignore
code/heat/heat2d3d_cmake/visu/: readme_visu.md
code/heat/heat2d3d_cmake/visu/mgl/: readme.md  test.cpp
code/heat/heat2d3d_cmake/visu/python/: heat.py
code/heat/heat2d3d_cmake_sol/: CMakeLists.txt  heat2d_kernel_gpu_naive.cu  heat2d_kernel_gpu_naive2.cu  heat2d_kernel_gpu_shmem1.cu  heat2d_kernel_gpu_shmem2.cu  heat2d_solver_gpu_naive.cu  heat2d_solver_gpu_naive2.cu  heat2d_solver_gpu_naive_managed.cu  heat2d_solver_gpu_shmem1.cu  heat2d_solver_gpu_shmem2.cu  heat2d_solver_gpu_shmem3.cu  heat3d_kernel_cpu.cpp  heat3d_kernel_gpu_naive.cu  heat3d_kernel_gpu_shmem1.cu  heat3d_kernel_gpu_shmem2.cu  heat3d_kernel_gpu_shmem3.cu  heat3d_solver_gpu_shmem1.cu  heat3d_solver_gpu_shmem2.cu  heat3d_solver_gpu_shmem3.cu  heat3d_solver_gpu_shmem4.cu  heatEqSolver.par  main_glut.cpp  main_glut_gpu.cu  test.cpp
code/heat/heat2d3d_cmake_sol/common/: CMakeLists.txt  Timer.cpp  misc.cpp  openmp_utils.h  output.h  param.cpp  param.h
code/heat/heat2d3d_cmake_sol/doc/: Doxyfile.dox  readme
code/heat/heat2d3d_cmake_sol/visu/python/: displayDataXsm.py  readme.md
code/heat/heat2d3d_cmake_sol/visu/python/test/: test.py  test2.py  test4.py
code/helloworld/1/: .gitignore  helloworld.cu  helloworld_arg.cu  helloworld_block.cu
code/helloworld/1/solution/: helloworld_arg2.cu  helloworld_block.cu
code/helloworld/2/: helloworld.cu  helloworld_array.cu
code/helloworld/2/solution/: .gitignore  helloworld_array.cu  helloworld_array_managed.cu
code/helloworld/3/: .gitignore  helloworld_array.cu  helloworld_array2.cu  readme.md
code/helloworld/4/: readme.md  test.cu
code/limitingFactor/: .gitignore  limitingFactor.cu  limitingFactor.cuf  readme.md
code/mini-projet/LBM/: readme.md
code/mini-projet/LBM/cpp/LBM_cpp/: .gitignore  CMakeLists.txt  README.md
code/mini-projet/LBM/cpp/LBM_cpp/src/: CMakeLists.txt  flowAroundCylinder.ini  main.cpp
code/mini-projet/LBM/cpp/LBM_cpp/src/lbm/: CMakeLists.txt  LBMParams.cpp  LBMParams.h  LBMSolver.cpp  LBMSolver.h  lbmFlowUtils.cpp  lbmFlowUtils.h
code/mini-projet/LBM/cpp/LBM_cpp/src/utils/monitoring/: cuda_error.h
code/mini-projet/LBM/cpp/LBM_cpp/src/utils/writePNG/: CMakeLists.txt
code/mini-projet/LBM/cpp/LBM_cpp/src/utils/writeVTK/: saveVTK.cpp
code/mini-projet/LBM/cpp/LBM_cpp/test/: CMakeLists.txt
code/mini-projet/LBM/cpp/LBM_cuda/: CMakeLists.txt  README.md
code/mini-projet/LBM/cpp/LBM_cuda/src/: CMakeLists.txt  flowAroundCylinder.ini  main.cu
code/mini-projet/LBM/cpp/LBM_cuda/src/lbm/: CMakeLists.txt  LBMSolver.cu  LBMSolver.h  lbmFlowUtils.cu  lbmFlowUtils.h  lbmFlowUtils_kernels.h
code/mini-projet/LBM/cpp/LBM_cuda/src/utils/config/: CMakeLists.txt
code/mini-projet/LBM/cpp/LBM_cuda/src/utils/monitoring/: CMakeLists.txt  my_cuda_utils.cu
code/mini-projet/LBM/cpp/LBM_cuda/src/utils/writePNG/: readme.md
code/mini-projet/LBM/cpp/LBM_cuda/src/utils/writeVTK/: CMakeLists.txt  testVTK.cpp
code/mini-projet/LBM/cpp/LBM_kokkos/: .gitignore  CMakeLists.txt  README.md
code/mini-projet/LBM/cpp/LBM_kokkos/cmake/cuda/: FindCUDALibs.cmake
code/mini-projet/LBM/cpp/LBM_kokkos/src/: CMakeLists.txt  main.cpp
code/mini-projet/LBM/cpp/LBM_kokkos/src/lbm/: CMakeLists.txt  LBMParams.h  LBMSolver.cpp  LBMSolver.h  lbmFlowUtils.cpp  lbmFlowUtils.h  real_type.h  real_type_kokkos.h
code/mini-projet/LBM/cpp/LBM_kokkos/src/utils/: CMakeLists.txt  openacc_utils.h  openmp_utils.h
code/mini-projet/LBM/cpp/LBM_kokkos/src/utils/monitoring/: my_cuda_utils.h
code/mini-projet/LBM/cpp/LBM_kokkos/src/utils/writeVTK/: saveVTK.h
code/mini-projet/LBM/cpp/LBM_kokkos/test/configMap/: CMakeLists.txt
code/mini-projet/LBM/python/: lbmFlowAroundCylinder.py
code/mini-projet/Mandelbrot/: readme.md
code/mini-projet/comparison_MatX_CuPy/: readme.md
code/mini-projet/pinn/: projects.md
code/mini-projet/wave2d/: readme.md
code/openacc/: readme-training.md  readme.md
code/python_cuda/cython/: .gitignore  README.md  setup.py  test.py  test_nvvp.py
code/python_cuda/cython-template/: README.md  setup.py  test.py  wrapper.pyx
code/python_cuda/cython-template/src/: kernel.cu  manager.cu  manager.hh
code/python_cuda/cython-template2/: .gitignore  README.md  process_tmpl.py  setup.py  test.py  wrapper_tmpl.pyx.in
code/python_cuda/cython-template2/src/: manager.cu
code/python_cuda/numba/: insertion_sort.py  numba_saxpy.ipynb
code/python_cuda/pybind11/: readme
code/python_cuda/swig/: .gitignore  README.md  setup.py
code/python_cuda/swig/src/: .gitignore  test.py
code/saxpy/dgemm_nvblas/: .gitignore  dgemm_example.c  nvblas.conf  readme.md
code/saxpy/saxpy_cuda_cpp/: .gitignore  Makefile  OpenMPTimer.cpp  README.md  my_cuda_utils.cu  my_cuda_utils.h  saxpy.cu
code/saxpy/saxpy_cuda_thrust/: CudaTimer.h  README.md  saxpy_thrust_v1.cu  saxpy_thrust_v2.cu
code/saxpy/saxpy_pthread/: .gitignore  saxpy_pthreads.cpp
code/thrust/: .gitignore  CpuTimer.cpp  CpuTimer.h  CpuTimerOmp.cpp  CpuTimerOmp.h  GpuTimer.h  readme.md  reduce.cu  reduce_answer.cu  reduce_openmp.cpp  sort.cu
code/transposition/: .gitignore  HandsOnExcercise.tgz  readme.md
(+1 files in other folders)
